# fitsfs

./: .gitignore  README.md  setup.cfg
fitsfs/: fitsfs.py
