[metadata]
name = fitsfs
version = 0.0.4
author = Daniel P. Rice
author_email = daniel.paul.rice@gmail.com
description = fitting population size history to the sfs
long_description = file: README.md

[options]
packages = find:
python_requires = ~=3.9
install_requires =
    numpy~=1.20
    scipy~=1.6
    autograd~=1.3
    autoptim
